--- a/App/partial/trip-list.html
+++ b/App/partial/trip-list.html
@@ -7,5 +7,5 @@
          <div class="col-md-4" ng-bind="trip.vehicle"></div>
          <div class="col-md-4" ng-bind="trip.departureTime"></div>
     </div>
-    <p>Total number of phones: {{trips.length}}</p>
+    <p>Total number of shuttles: {{trips.length}}</p>
 </div>
