Segrigation of Angular components in Files. start of Search functionality

--- a/App/partial/trip-detail.html
+++ b/App/partial/trip-detail.html
@@ -3,9 +3,15 @@
         <span ng-bind="tripId"></span>
     </div>
     <div>
-        <span ng-bind="name"></span>
+        <span ng-bind="from"></span>
     </div>
     <div>
-        <span ng-bind="snippet"></span>
+        <span ng-bind="to"></span>
+    </div>
+     <div>
+        <span ng-bind="vehicle"></span>
+    </div>
+     <div>
+        <span ng-bind="departureTime"></span>
     </div>
 </div>
